--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4584,4 +4584,242 @@ h1, h2, h3, h4, h5, h6 {
         -o-border-radius: 50%; }
   
   /*----------------------------------------*/
+  /*  09. team
+/*----------------------------------------*/
+.team__wrap {
+    border: 1px solid #2B2B54;
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+    overflow: hidden;
+    background-color: #0B0B29; }
+  .team__item {
+    width: 25%;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    padding: 48px 20px 38px; }
+    @media (max-width: 1199px) {
+      .team__item {
+        width: 50%;
+        border-top: 1px solid #2B2B54;
+        margin-top: -1px; } }
+    @media (max-width: 767px) {
+      .team__item {
+        width: 100%; } }
+    .team__item:not(:last-child) {
+      border-right: 1px solid #2B2B54; }
+    .team__item:hover {
+      background-color: #1D1D3E; }
+    .team__item .avatar {
+      width: 224px;
+      height: 224px;
+      border-radius: 50%;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      -o-border-radius: 50%;
+      overflow: hidden;
+      margin: 0 auto 45px; }
+  .team__info h3 {
+    font-size: 22px;
+    font-weight: 600;
+    margin-bottom: 10px; }
+  .team__info span {
+    font-size: 16px;
+    font-weight: 600;
+    display: inline-block; }
+  .team__social .h-icon {
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    display: inline-block;
+    font-size: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--color-white);
+    margin: 0 5px;
+    background-color: var(--color-primary);
+    z-index: 1;
+    position: relative; }
+    .team__social .h-icon i {
+      -webkit-transition: 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+      -o-transition: 0.6s cubic-bezier(0.25, 1, 0.5, 1);
+      transition: 0.6s cubic-bezier(0.25, 1, 0.5, 1); }
+  .team__social.style2 .h-icon {
+    width: 31px;
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    -ms-border-radius: 0;
+    -o-border-radius: 0;
+    color: #03050E;
+    position: relative;
+    clip-path: polygon(0 25%, 50% 0, 100% 25%, 99% 75%, 50% 100%, 0 75%); }
+    .team__social.style2 .h-icon::before, .team__social.style2 .h-icon::after {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #fff;
+      content: "";
+      z-index: -1;
+      -webkit-transition: 0.3s;
+      -o-transition: 0.3s;
+      transition: 0.3s; }
+    .team__social.style2 .h-icon::after {
+      opacity: 0; }
+  .team__social.style2 .team__social-link li a {
+    width: 35px;
+    height: 35px;
+    background-color: transparent;
+    background-image: url(../img/icon/s_icon_bg.png);
+    background-position: center center; }
+  .team__social-link {
+    opacity: 0;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s; }
+    .team__social-link li:not(:last-child) {
+      margin-right: 5px; }
+    .team__social-link li a {
+      width: 33px;
+      height: 33px;
+      border-radius: 50%;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      -o-border-radius: 50%;
+      display: inline-block;
+      font-size: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: var(--color-white);
+      background-color: #121229; }
+    .team__social-link.link-left {
+      -webkit-transform: translateX(20px);
+      -ms-transform: translateX(20px);
+      transform: translateX(20px); }
+    .team__social-link.link-right {
+      -webkit-transform: translateX(-20px);
+      -ms-transform: translateX(-20px);
+      transform: translateX(-20px); }
+  .team__item:hover .team__social-link, .team__single:hover .team__social-link {
+    opacity: 1;
+    -webkit-transform: translateX(0);
+    -ms-transform: translateX(0);
+    transform: translateX(0); }
+  .team__item:hover .team__social .h-icon, .team__single:hover .team__social .h-icon {
+    color: #fff; }
+    .team__item:hover .team__social .h-icon i, .team__single:hover .team__social .h-icon i {
+      -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+      transform: rotate(180deg); }
+    .team__item:hover .team__social .h-icon i:before, .team__single:hover .team__social .h-icon i:before {
+      content: "\f068"; }
+    .team__item:hover .team__social .h-icon::after, .team__single:hover .team__social .h-icon::after {
+      opacity: 1; }
+  .team__shape .shape {
+    position: absolute;
+    z-index: -1; }
+    .team__shape .shape--1 {
+      bottom: -50%;
+      right: 0; }
+    .team__shape .shape--2 {
+      bottom: 3%;
+      right: 0; }
+  .team__single {
+    background-image: url(../img/bg/team_bg1.png);
+    min-height: 366px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 100%;
+    padding: 40px 45px;
+    margin-left: -40px;
+    margin-right: -40px;
+    position: relative; }
+    .team__single::before, .team__single::after {
+      position: absolute;
+      top: 0;
+      left: 40px;
+      width: 54px;
+      height: 65px;
+      content: "";
+      background-color: #fff;
+      clip-path: polygon(0 0, 0 100%, 100% 0);
+      -webkit-transition: 0.3s;
+      -o-transition: 0.3s;
+      transition: 0.3s; }
+      @media (max-width: 1199px) {
+        .team__single::before, .team__single::after {
+          display: none; } }
+    .team__single::after {
+      opacity: 0; }
+    .team__single:hover::after {
+      opacity: 1; }
+    .team__single.style2 {
+      background-image: url(../img/bg/team_bg2.png); }
+      .team__single.style2::before, .team__single.style2::after {
+        left: auto;
+        right: 40px;
+        top: auto;
+        bottom: 22px;
+        clip-path: polygon(100% 0, 0 100%, 100% 100%); }
+    .team__single .avatar {
+      width: 134px;
+      height: 134px;
+      border-radius: 50%;
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      -o-border-radius: 50%;
+      margin: 0 auto 20px;
+      overflow: hidden; }
+      .team__single .avatar img {
+        -webkit-filter: grayscale(100%);
+        filter: grayscale(100%);
+        -webkit-transition: 0.3s;
+        -o-transition: 0.3s;
+        transition: 0.3s; }
+    .team__single:hover .avatar img {
+      -webkit-filter: grayscale(0);
+      filter: grayscale(0); }
+    .team__single .content h3 {
+      font-size: 18px;
+      font-weight: 600;
+      color: var(--color-white);
+      margin-bottom: 12px;
+      letter-spacing: -0.54px; }
+    .team__single .content span {
+      font-size: 16px;
+      color: #B3B3C0; }
+    .team__single .rating {
+      position: absolute;
+      top: 10px;
+      right: 60px;
+      background-image: url(../img/bg/rating_bg.png);
+      width: 67px;
+      height: 28px;
+      background-repeat: no-repeat;
+      color: var(--color-white);
+      display: flex;
+      align-items: center;
+      justify-content: center; }
+      .team__single .rating img {
+        margin-right: 5px; }
+  .team__bg {
+    background-repeat: no-repeat;
+    background-position: center 62%;
+    background-size: contain; }
+  
+  /*----------------------------------------*/
   
